# cressent

./: .gitignore  .readthedocs.yaml  =4.4  Dockerfile  LICENSE  LOGFILE.sum  README.md  conf.py  cressent_env.yaml  meta.yaml  pyproject.toml  requirements.txt  requirements_rtd.txt  setup.py  ssDNA_env.yaml  test_fast.fa
DB/: tree_models.csv  walkerA_motif_regex.csv
DB/caps/: Adamaviridae.fa  Alphapleolipovirus.fa  Amesuviridae.fa  Anelloviridae.fa  Anicreviridae.fa  Bacilladnaviridae.fa  Bidnaviridae.fa  Circoviridae.fa  Draupnirviridae.fa  Finnlakeviridae.fa  Gandrviridae.fa  Geminiviridae.fa  Genomoviridae.fa  Inoviridae.fa  Kirkoviridae.fa  Metaxyviridae.fa  Microviridae.fa  Nanoviridae.fa  Naryaviridae.fa  Nenyaviridae.fa  Ouroboviridae.fa  Parvoviridae.fa  Paulinoviridae.fa  Pecoviridae.fa  Plectroviridae.fa  Redondoviridae.fa  Smacoviridae.fa  Vilyaviridae.fa
DB/contaminant/: contaminant_db_metadata.tsv  decont_accession_list.csv
DB/reps/: Adamaviridae.fa  Alphapleolipovirus.fa  Alphasatellitidae.fa  Amesuviridae.fa  Anelloviridae.fa  Anicreviridae.fa  Bacilladnaviridae.fa  Circoviridae.fa  Draupnirviridae.fa  Gandrviridae.fa  Geminiviridae.fa  Genomoviridae.fa  Inoviridae.fa  Kirkoviridae.fa  Microviridae.fa  Nanoviridae.fa  Naryaviridae.fa  Nenyaviridae.fa  Ouroboviridae.fa  Parvoviridae.fa  Paulinoviridae.fa  Pecoviridae.fa  Plectroviridae.fa  Redondoviridae.fa  Smacoviridae.fa  Tolecusatellitidae.fa  Vilyaviridae.fa
DB/scripts/: 1a.download_data.sh  1a.download_data_family_ictv_aa.sh  1a.download_data_family_ictv_not_found.ipynb  1a.download_data_family_ictv_not_found.py  1a.download_data_family_ictv_not_found.sh  1b.download_data_complete_genome.sh  1c.download_data_sequences.sh  1d.add_family_name.py  2.cluster_cdhit.sh  3.blastp.sh  4.cluster_MCL.sh  5a.cluster_protein_description.R  5b.cluster_protein_curation.R  6.alignment.sh  6a.concat_seqs.sh  6b.alignment_concat.sh  7b.rename_seqs.sh  (+5 more)
build_db/: 0.get_tax_to_query.ipynb  1a.download_data_family_ictv_aa.sh  1a.download_data_family_ictv_not_found.py  2.cluster_cdhit.sh  3.blastp.sh  4.cluster_MCL.sh  5a.cluster_protein_description.R  5b.cluster_protein_curation.R  6a.concat_align_trim_family.sh  6b.add_family_name.py  6c.alignment_concat_all.sh  6d.concat_align_trim.sh  README.md  VMR_MSL39.v4_20241106.xlsx  accession_not_found_refseq.csv  names_to_query_ssdna.csv  test.ipynb
cressent/: cli.py
cressent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cressent_core/: cli.py  cressent.py
docs/: make.bat  requirements_rtd.txt
jobs/: align_test_job.sh
recipe/: meta.yaml
source/: conf.py
ssDNA_annotator/: test.ipynb
test_data_1/: sub_reps_aligned_trimmed_sequences_sanitized_name_table.tsv
test_data_2/: sub_reps_aligned_trimmed_sequences_sanitized_sequences.fasta
tests/: make_fasta_from_csv.sh  test.sh
(+101 files in other folders)
